Fixed a bug where turn message was still visible even after the match has ended Added a small margin for player turn message

--- a/ui/src/game/tic-tac-toe/tic-tac-toe.css
+++ b/ui/src/game/tic-tac-toe/tic-tac-toe.css
@@ -35,6 +35,7 @@
 
 .turn-msg {
   width: 60vmin;
+  margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
 }
